[gd_scene load_steps=39 format=2]

[ext_resource path="res://Assets/Buttons/TopBar/img_enhancer_off.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ctrlFactoryFloor.gd" type="Script" id=2]
[ext_resource path="res://Assets/Tileables/img_factory_grass_32x.png" type="Texture" id=3]
[ext_resource path="res://Scenes/objCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Misc/img_progress_bar.png" type="Texture" id=5]
[ext_resource path="res://Fonts/minecraft_regular.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/SideBarNode.gd" type="Script" id=7]
[ext_resource path="res://Assets/Buttons/TopBar/img_holder_off.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu/img_menu_black_9x.png" type="Texture" id=9]
[ext_resource path="res://Assets/Buttons/SideBar/img_delete_off.png" type="Texture" id=10]
[ext_resource path="res://Assets/Tileables/img_factory_orange_120x.png" type="Texture" id=11]
[ext_resource path="res://Scripts/TopBarNode.gd" type="Script" id=12]
[ext_resource path="res://Scripts/texInfoBar.gd" type="Script" id=13]
[ext_resource path="res://Assets/Resources/img_copperore.png" type="Texture" id=14]
[ext_resource path="res://Assets/Buttons/SideBar/img_move_off.png" type="Texture" id=15]
[ext_resource path="res://Assets/Buttons/SideBar/img_autocraft_off.png" type="Texture" id=16]
[ext_resource path="res://Assets/Buttons/SideBar/img_info_off.png" type="Texture" id=17]
[ext_resource path="res://Assets/Buttons/TopBar/img_connector_off.png" type="Texture" id=18]
[ext_resource path="res://Assets/Buttons/SideBar/img_connect_off.png" type="Texture" id=19]
[ext_resource path="res://Scripts/ResourceBarNode.gd" type="Script" id=20]
[ext_resource path="res://Assets/Menu/img_right.png" type="Texture" id=21]
[ext_resource path="res://Assets/Menu/img_left.png" type="Texture" id=22]
[ext_resource path="res://Assets/Misc/img_progress_bar_over.png" type="Texture" id=23]
[ext_resource path="res://Assets/Menu/img_res_slot.png" type="Texture" id=24]
[ext_resource path="res://Fonts/minecraft_bold.otf" type="DynamicFontData" id=25]
[ext_resource path="res://Assets/FactoryEntity/Structure/Holder/img_huntingtent.png" type="Texture" id=27]
[ext_resource path="res://Scenes/FactoryScene/objSolidResInfo.tscn" type="PackedScene" id=28]
[ext_resource path="res://Assets/FactoryEntity/Structure/Processor/img_smeltery.png" type="Texture" id=29]
[ext_resource path="res://Assets/Menu/img_fluid_slot_tile.png" type="Texture" id=30]
[ext_resource path="res://Assets/Menu/img_fluid_slot.png" type="Texture" id=31]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Theme" id=2]
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = null
HScrollBar/styles/grabber_highlight = null
HScrollBar/styles/grabber_pressed = null
HScrollBar/styles/scroll = SubResource( 1 )
HScrollBar/styles/scroll_focus = null

[sub_resource type="DynamicFont" id=3]
size = 56
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 25 )

[sub_resource type="CircleShape2D" id=4]
radius = 64.0

[sub_resource type="CircleShape2D" id=5]
radius = 64.0

[sub_resource type="CircleShape2D" id=6]
radius = 16.0

[node name="FactoryNode" type="Control"]
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBackground" type="TextureRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
mouse_filter = 2
texture = ExtResource( 11 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctnFactoryViewport" type="ViewportContainer" parent="."]
margin_right = 1080.0
margin_bottom = 1664.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vptFactoryScene" type="Viewport" parent="ctnFactoryViewport"]
size = Vector2( 1080, 1632 )
handle_input_locally = false
msaa = 3
usage = 0
render_target_update_mode = 3
physics_object_picking = true

[node name="texBackground" type="TextureRect" parent="ctnFactoryViewport/vptFactoryScene"]
show_behind_parent = true
margin_right = 1152.0
margin_bottom = 2432.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrlFactoryFloor" type="Control" parent="ctnFactoryViewport/vptFactoryScene"]
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="camFactory" parent="ctnFactoryViewport/vptFactoryScene" instance=ExtResource( 4 )]

[node name="ResourceBarNode" type="VBoxContainer" parent="."]
margin_top = 128.0
margin_right = 196.0
margin_bottom = 1208.0
mouse_filter = 2
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBarNode" type="Control" parent="."]
mouse_filter = 2
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBar" type="TextureRect" parent="TopBarNode"]
margin_right = 1080.0
margin_bottom = 120.0
rect_scale = Vector2( 1, 1.07 )
mouse_filter = 2
texture = ExtResource( 11 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texMenu" type="TextureRect" parent="TopBarNode"]
margin_top = -383.0
margin_right = 1080.0
margin_bottom = -23.0
rect_scale = Vector2( 1, 1.07 )
mouse_filter = 2
theme = SubResource( 2 )
texture = ExtResource( 11 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnProcessorMenu" type="TouchScreenButton" parent="TopBarNode"]
normal = ExtResource( 18 )

[node name="grdProcessor" type="GridContainer" parent="TopBarNode"]
margin_top = -384.0
margin_right = 1080.0
rect_scale = Vector2( 0.67, 0.67 )
mouse_filter = 2
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnHolderMenu" type="TouchScreenButton" parent="TopBarNode"]
position = Vector2( 275, 0 )
normal = ExtResource( 8 )

[node name="grdHolder" type="GridContainer" parent="TopBarNode"]
margin_top = -384.0
margin_right = 1080.0
rect_scale = Vector2( 0.67, 0.67 )
mouse_filter = 2
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnEnhancerMenu" type="TouchScreenButton" parent="TopBarNode"]
position = Vector2( 549, 0 )
normal = ExtResource( 1 )

[node name="grdEnhancer" type="GridContainer" parent="TopBarNode"]
margin_top = -384.0
margin_right = 1080.0
rect_scale = Vector2( 0.67, 0.67 )
mouse_filter = 2
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnConnectorMenu" type="TouchScreenButton" parent="TopBarNode"]
position = Vector2( 824, 0 )
normal = ExtResource( 18 )

[node name="grdConnector" type="GridContainer" parent="TopBarNode"]
margin_top = -384.0
margin_right = 1080.0
rect_scale = Vector2( 0.67, 0.67 )
mouse_filter = 2
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="twnTopBar" type="Tween" parent="TopBarNode"]

[node name="SideBarNode" type="Control" parent="."]
margin_left = 1080.0
margin_top = 128.0
margin_right = 1080.0
margin_bottom = 128.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texInfoBar" type="NinePatchRect" parent="SideBarNode"]
margin_left = -1080.0
margin_top = 1202.0
margin_bottom = 1490.0
mouse_filter = 0
region_rect = Rect2( 0, 0, 9, 9 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBacking" type="NinePatchRect" parent="SideBarNode/texInfoBar"]
margin_right = 270.0
margin_bottom = 72.0
rect_scale = Vector2( 4, 4.28 )
mouse_filter = 0
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 9, 9 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infoName" type="HBoxContainer" parent="SideBarNode/texInfoBar"]
margin_right = 1080.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labName" type="Label" parent="SideBarNode/texInfoBar/infoName"]
margin_left = 18.0
margin_right = 538.0
margin_bottom = 64.0
rect_min_size = Vector2( 520, 0 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 3
custom_constants/shadow_offset_y = 3
text = " Name"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labType" type="Label" parent="SideBarNode/texInfoBar/infoName"]
margin_left = 542.0
margin_right = 1062.0
margin_bottom = 64.0
rect_min_size = Vector2( 520, 0 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.890196, 0.470588, 0.25098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 3
custom_constants/shadow_offset_y = 3
text = "(Structure)"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infoProcessor" type="HBoxContainer" parent="SideBarNode/texInfoBar"]
margin_top = 65.0
margin_right = 1080.0
margin_bottom = 288.0
mouse_filter = 2
custom_constants/separation = 8
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrlLeftProcess" type="Control" parent="SideBarNode/texInfoBar/infoProcessor"]
margin_left = 82.0
margin_right = 136.4
margin_bottom = 223.0
rect_min_size = Vector2( 54.4, 217.6 )

[node name="btnLeft" type="TouchScreenButton" parent="SideBarNode/texInfoBar/infoProcessor/ctrlLeftProcess"]
position = Vector2( 0, 3 )
scale = Vector2( 3.4, 3.4 )
normal = ExtResource( 22 )

[node name="inputBuffers" type="HBoxContainer" parent="SideBarNode/texInfoBar/infoProcessor"]
margin_left = 144.0
margin_right = 344.0
margin_bottom = 223.0
rect_min_size = Vector2( 200, 223 )
alignment = 2

[node name="inputFluid" type="TextureRect" parent="SideBarNode/texInfoBar/infoProcessor/inputBuffers"]
visible = false
margin_right = 64.0
margin_bottom = 223.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 30 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBacking" type="NinePatchRect" parent="SideBarNode/texInfoBar/infoProcessor/inputBuffers/inputFluid"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 223.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 31 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labAmount" type="Label" parent="SideBarNode/texInfoBar/infoProcessor/inputBuffers/inputFluid"]
anchor_top = 0.8
anchor_right = 0.94
anchor_bottom = 1.0
margin_top = 1.52588e-05
margin_right = 7.62939e-06
margin_bottom = 1.52588e-05
custom_fonts/font = SubResource( 8 )
text = "0"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inputSolid" type="VBoxContainer" parent="SideBarNode/texInfoBar/infoProcessor/inputBuffers"]
margin_right = 200.0
margin_bottom = 223.0
size_flags_horizontal = 3
alignment = 1

[node name="texBuffer0" parent="SideBarNode/texInfoBar/infoProcessor/inputBuffers/inputSolid" instance=ExtResource( 28 )]
margin_right = 200.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="texBuffer1" parent="SideBarNode/texInfoBar/infoProcessor/inputBuffers/inputSolid" instance=ExtResource( 28 )]
margin_top = 75.0
margin_right = 200.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="texBuffer2" parent="SideBarNode/texInfoBar/infoProcessor/inputBuffers/inputSolid" instance=ExtResource( 28 )]
margin_top = 150.0
margin_right = 200.0
margin_bottom = 223.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="prgProcess" type="TextureProgress" parent="SideBarNode/texInfoBar/infoProcessor"]
margin_left = 352.0
margin_right = 552.0
margin_bottom = 223.0
rect_min_size = Vector2( 200, 100 )
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 23 )
nine_patch_stretch = true

[node name="outputBuffers" type="HBoxContainer" parent="SideBarNode/texInfoBar/infoProcessor"]
margin_left = 560.0
margin_right = 760.0
margin_bottom = 223.0
rect_min_size = Vector2( 200, 223 )
alignment = 2

[node name="outputFluid" type="TextureRect" parent="SideBarNode/texInfoBar/infoProcessor/outputBuffers"]
visible = false
margin_right = 64.0
margin_bottom = 223.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 30 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBacking" type="NinePatchRect" parent="SideBarNode/texInfoBar/infoProcessor/outputBuffers/outputFluid"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 223.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 31 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labAmount" type="Label" parent="SideBarNode/texInfoBar/infoProcessor/outputBuffers/outputFluid"]
anchor_top = 0.8
anchor_right = 0.94
anchor_bottom = 1.0
margin_top = 1.52588e-05
margin_right = 7.62939e-06
margin_bottom = 1.52588e-05
custom_fonts/font = SubResource( 8 )
text = "0"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="outputSolid" type="VBoxContainer" parent="SideBarNode/texInfoBar/infoProcessor/outputBuffers"]
margin_right = 200.0
margin_bottom = 223.0
size_flags_horizontal = 3
alignment = 1

[node name="texBuffer0" parent="SideBarNode/texInfoBar/infoProcessor/outputBuffers/outputSolid" instance=ExtResource( 28 )]
margin_right = 200.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="texBuffer1" parent="SideBarNode/texInfoBar/infoProcessor/outputBuffers/outputSolid" instance=ExtResource( 28 )]
margin_top = 75.0
margin_right = 200.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="texBuffer2" parent="SideBarNode/texInfoBar/infoProcessor/outputBuffers/outputSolid" instance=ExtResource( 28 )]
margin_top = 150.0
margin_right = 200.0
margin_bottom = 223.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ctrlRightProcess" type="Control" parent="SideBarNode/texInfoBar/infoProcessor"]
margin_left = 768.0
margin_right = 822.4
margin_bottom = 223.0
rect_min_size = Vector2( 54.4, 217.6 )

[node name="btnRight" type="TouchScreenButton" parent="SideBarNode/texInfoBar/infoProcessor/ctrlRightProcess"]
position = Vector2( 0, 3 )
scale = Vector2( 3.4, 3.4 )
normal = ExtResource( 21 )

[node name="texStructure" type="TextureRect" parent="SideBarNode/texInfoBar/infoProcessor"]
margin_left = 830.0
margin_right = 1080.0
margin_bottom = 223.0
rect_min_size = Vector2( 250, 0 )
rect_clip_content = true
mouse_filter = 2
texture = ExtResource( 29 )
expand = true
stretch_mode = 6

[node name="infoHolder" type="HBoxContainer" parent="SideBarNode/texInfoBar"]
visible = false
margin_top = 65.0
margin_right = 1080.0
margin_bottom = 288.0
mouse_filter = 2
custom_constants/separation = 8
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texInternalStorage" type="TextureRect" parent="SideBarNode/texInfoBar/infoHolder"]
margin_left = 537.0
margin_right = 760.0
margin_bottom = 223.0
rect_min_size = Vector2( 223, 223 )
texture = ExtResource( 24 )
expand = true

[node name="texResource" type="TextureRect" parent="SideBarNode/texInfoBar/infoHolder/texInternalStorage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = 21.0
margin_right = -22.0
margin_bottom = -22.0
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labAmount" type="Label" parent="SideBarNode/texInfoBar/infoHolder/texInternalStorage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 146.0
margin_right = -20.0
margin_bottom = -12.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buffer" type="Control" parent="SideBarNode/texInfoBar/infoHolder"]
margin_left = 768.0
margin_right = 822.4
margin_bottom = 223.0
rect_min_size = Vector2( 54.4, 217.6 )

[node name="texStructure" type="TextureRect" parent="SideBarNode/texInfoBar/infoHolder"]
margin_left = 830.0
margin_right = 1080.0
margin_bottom = 223.0
rect_min_size = Vector2( 250, 0 )
rect_clip_content = true
mouse_filter = 2
texture = ExtResource( 27 )
expand = true
stretch_mode = 6

[node name="btnInfoToggle" type="TouchScreenButton" parent="SideBarNode"]
position = Vector2( -128, 8 )
normal = ExtResource( 17 )
shape = SubResource( 4 )

[node name="btnMoveToggle" type="TouchScreenButton" parent="SideBarNode"]
position = Vector2( -128, 144 )
normal = ExtResource( 15 )
shape = SubResource( 5 )

[node name="btnConnectToggle" type="TouchScreenButton" parent="SideBarNode"]
position = Vector2( -128, 280 )
normal = ExtResource( 19 )
shape = SubResource( 5 )

[node name="texConnector" type="TextureRect" parent="SideBarNode/btnConnectToggle"]
margin_left = 32.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 64.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnDeleteToggle" type="TouchScreenButton" parent="SideBarNode"]
position = Vector2( -128, 416 )
normal = ExtResource( 10 )
shape = SubResource( 4 )

[node name="btnAutocraftToggle" type="TouchScreenButton" parent="SideBarNode"]
position = Vector2( -128, 552 )
scale = Vector2( 4, 4 )
normal = ExtResource( 16 )
shape = SubResource( 6 )

[node name="twnSideBar" type="Tween" parent="SideBarNode"]
[connection signal="pressed" from="TopBarNode/btnProcessorMenu" to="TopBarNode" method="_on_btnProcessorMenu_pressed"]
[connection signal="pressed" from="TopBarNode/btnHolderMenu" to="TopBarNode" method="_on_btnHolderMenu_pressed"]
[connection signal="pressed" from="TopBarNode/btnEnhancerMenu" to="TopBarNode" method="_on_btnEnhancerMenu_pressed"]
[connection signal="pressed" from="TopBarNode/btnConnectorMenu" to="TopBarNode" method="_on_btnConnectorMenu_pressed"]
[connection signal="pressed" from="SideBarNode/texInfoBar/infoProcessor/ctrlLeftProcess/btnLeft" to="SideBarNode/texInfoBar" method="_on_btnLeft_pressed"]
[connection signal="pressed" from="SideBarNode/texInfoBar/infoProcessor/ctrlRightProcess/btnRight" to="SideBarNode/texInfoBar" method="_on_btnRight_pressed"]
[connection signal="pressed" from="SideBarNode/btnInfoToggle" to="SideBarNode" method="_on_btnInfoToggle_pressed"]
[connection signal="released" from="SideBarNode/btnInfoToggle" to="SideBarNode" method="_on_btnInfoToggle_released"]
[connection signal="pressed" from="SideBarNode/btnMoveToggle" to="SideBarNode" method="_on_btnMoveToggle_pressed"]
[connection signal="released" from="SideBarNode/btnMoveToggle" to="SideBarNode" method="_on_btnMoveToggle_released"]
[connection signal="pressed" from="SideBarNode/btnConnectToggle" to="SideBarNode" method="_on_btnConnectToggle_pressed"]
[connection signal="released" from="SideBarNode/btnConnectToggle" to="SideBarNode" method="_on_btnConnectToggle_released"]
[connection signal="pressed" from="SideBarNode/btnDeleteToggle" to="SideBarNode" method="_on_btnDeleteToggle_pressed"]
[connection signal="released" from="SideBarNode/btnDeleteToggle" to="SideBarNode" method="_on_btnDeleteToggle_released"]
[connection signal="pressed" from="SideBarNode/btnAutocraftToggle" to="SideBarNode" method="_on_btnAutocraftToggle_pressed"]
[connection signal="released" from="SideBarNode/btnAutocraftToggle" to="SideBarNode" method="_on_btnAutocraftToggle_released"]
